1. add typedef. 2. fft/axilite to be debug.

--- a/sim_guide/iverilog/Makefile
+++ b/sim_guide/iverilog/Makefile
@@ -1,17 +1,28 @@
+.PHONY: all build run wave clean
+
+TB = TestAccu
+SRC = $(TB).sv
+# append a `.ivo` suffix for differentiation
+IVOBJ = $(TB).ivo
+# convert to fst format for GTKWAVE, which is smaller than VCD file
+WAV = $(TB).fst
+
 all: build run wave
 
-prj = testbench
+build: $(IVOBJ)
+$(IVOBJ): $(SRC)
+	@echo "Iverilog compiling..."
+	iverilog $(SRC) -o $(IVOBJ) -g2005-sv || (echo "Compilation failed." && exit 1)
 
-build:
-	# append a `.ivo` suffix for differentiation
-	iverilog -o $(prj).ivo $(prj).sv -g2012
+run: build $(WAV)
+$(WAV): $(IVOBJ)
+	@echo "Iverilog simulation and generating waveform dump..."
+	vvp -n $(IVOBJ) -dumpfile=$(WAV) -fst || (echo "Simulation failed." && exit 1)
 
-run:
-	# convert to `fst` file to reduce the size
-	vvp -n $(prj).ivo -fst
-
-wave:
-	gtkwave $(prj).fst
+wave: $(WAV)
+	@echo "Opening waveform viewer..."
+	gtkwave $(WAV)
 
 clean:
-	rm $(prj).fst $(prj).ivo
+	@echo "Cleaning up generated files..."
+	rm $(IVOBJ) $(WAV)
